# rfdaemon

./: .gitignore  App.cpp  App.h  AppManager.cpp  AppManager.h  Axis.cpp  Axis.h  CMakeLists.txt  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  Dockerfile  RFDaemon.cpp  RFDaemon.h  RFDaemon.sln  RFDaemon.vcxproj  RFDaemon.vcxproj.filters  RFDaemonServer.cpp  RFDaemonServer.h  TcpClient.h  TcpServer.cpp  TcpServer.h  applist.json  applist_default.json  azure-pipelines-1.yml  azure-pipelines.yml  config_json_default.cpp  config_json_default.h  functors.h  jjj  main.cpp  main.h  make.py  parameter.cpp  parameter.h  string_constants.cpp  (+1 more)
configs/: reproxy-test.json  simulator.json  standart-applist.json
crc/: crc.c  crc.h
crc32_ccitt/: crc32_ccitt.c  crc32_ccitt.h
src/: App.cpp  App.h  AppManager.cpp  AppManager.h  Beam.cpp  Beam.h  RFDaemonServer.cpp  RFDaemonServer.h  TcpServer.cpp  TcpServer.h  console.cpp  console.h  defs.h  httpserver.cpp  httpserver.h  main.cpp  main.h  modes.h  shutdown.cpp  shutdown.h
src/app/: main.cpp
src/rfdaemonctl/: main.cpp
tests/: app_basic_tests.cpp
web/: functions.js  index.html  style.css
